--- a/react-tutorial/package.json
+++ b/react-tutorial/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "http-proxy-middleware": "^0.19.1",
     "react": "^17.0.2",
+    "react-daum-postcode": "^2.0.6",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.15.3",
     "react-router-dom": "^5.2.0",
@@ -42,5 +43,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000"
+  "proxy":
+    "http://3.36.50.0:3000/"
 }
